--- a/movie/src/components/Header/Header.scss
+++ b/movie/src/components/Header/Header.scss
@@ -21,28 +21,35 @@
   height: 38px;
 }
 
+.login{
+  margin-right: 50px;
+}
+
 .search-bar{
   width: 50%;
   display: flex;
   justify-content: center;
 }
-form{
-  display: flex;
-  justify-content: center;
-  width: 70%;
+// form{
+//   display: flex;
+//   justify-content: center;
+//   width: 70%;
 
-  button{
-    padding: 0px 8px;
-    font-size: 20px;
-    cursor: pointer;
-    height: 38px;
-  }
-}
+//   button{
+//     padding: 0px 8px;
+//     font-size: 20px;
+//     cursor: pointer;
+//     height: 38px;
+//   }
+// }
 
-.input{
-  font-size: 18px;
-  width: 100%;
-  padding: 5px 5px 5px 10px;
-  height: 38px;
-  outline: none;
+.inputHeader{
+  margin-right:2px ;
+  padding: 8px 30px;
+  background: rgba(255,255,255,0.8);
+  color: black;
+  font-weight: 600;
+  font-size: 11px;
+  border: 0;
+  text-shadow: 0 1px 2px #fff;
 }
