--- a/movie/src/App.scss
+++ b/movie/src/App.scss
@@ -1,9 +1,8 @@
 @import "../src/common/colors.scss";
 
 .app{
-//  background-color: red;\
-height: 700px;
-overflow-y: scroll;
+ height: 100vh;
+ overflow-y: scroll;
 
 }
 
