--- a/movie/src/components/Header/Header.scss
+++ b/movie/src/components/Header/Header.scss
@@ -30,21 +30,9 @@
   display: flex;
   justify-content: center;
 }
-// form{
-//   display: flex;
-//   justify-content: center;
-//   width: 70%;
-
-//   button{
-//     padding: 0px 8px;
-//     font-size: 20px;
-//     cursor: pointer;
-//     height: 38px;
-//   }
-// }
 
 .inputHeader{
-  margin-right:2px ;
+  margin-left:100px ;
   padding: 8px 30px;
   background: rgba(255,255,255,0.8);
   color: black;
